# SciPathBench

./: .gitignore  README.md  TODO.md  api_cache.sqlite-journal  benchmark_pairs.json  config.py  graph.json  main.py  pyproject.toml  scipathbench_results.json  visualization_map.txt  visualization_network.txt  web.py
docs/: brief.md  full.md  info.md
lib/vis-9.1.2/: vis-network.min.js
output/: graph.json  graphvisualization_task_1.json  graphvisualization_task_2.json  landmark_papers.json  reference_graph.json  scipathbench_results.json  visualization_task_1.html  visualization_task_1.json  visualization_task_2.html  visualization_task_2.json  web_runs.json
src/: config.py  dataset.py  eval.py  generate_data.py  graph_search.py  human_agent.py  llm_agent.py  oldmain.py  openalex_client.py  utils.py  visualization.py  web.py  web_human_agent.py  web_server.py
src/agents/: human_agent.py  llm_agent.py  web_human_agent.py
src/core/: graph_search.py  paper_graph.py
src/data/: dataset.py  generate_data.py  get_dois.py
src/services/: openalex_client.py  persistence.py
src/static/: style.css
src/templates/: base.html  interactive.html  live.html
src/web/: server.py
src/web/static/: app.js
src/web/templates/: index.html  leaderboard.html
