[project]
name = "scipathbench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "networkx>=3.5",
    "nx2vos>=0.2",
    "pyvis>=0.3.2",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "ruff>=0.12.7",
    "tqdm>=4.67.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "jinja2>=3.1.2",
]
